--- a/YouBest/Main.storyboard
+++ b/YouBest/Main.storyboard
@@ -133,7 +133,7 @@
                     <navigationItem key="navigationItem" title="Tasks" id="BuC-qU-9c5">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ptc-ad-Tb4">
                             <connections>
-                                <segue destination="ajJ-eU-pTi" kind="show" id="QVj-Q6-eXu"/>
+                                <segue destination="MAQ-dl-gzS" kind="show" id="EqF-eg-eJR"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -141,76 +141,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zOO-5Y-Znb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1073" y="839"/>
-        </scene>
-        <!--New Task-->
-        <scene sceneID="wDh-CB-2bJ">
-            <objects>
-                <viewController id="ajJ-eU-pTi" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6VE-oE-sCG"/>
-                        <viewControllerLayoutGuide type="bottom" id="fqx-jh-OGD"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ifW-wT-t9y">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XZ2-1g-aGM">
-                                <rect key="frame" x="64" y="46" width="530" height="30"/>
-                                <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="19" translatesAutoresizingMaskIntoConstraints="NO" id="mXp-QI-P9M">
-                                <rect key="frame" x="64" y="8" width="530" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yiC-gr-iKo">
-                                <rect key="frame" x="8" y="8" width="48" height="48"/>
-                                <color key="backgroundColor" red="0.6549019814" green="0.88235300780000003" blue="0.99215692280000001" alpha="1" colorSpace="deviceRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="48" id="Fon-M5-WIF"/>
-                                    <constraint firstAttribute="width" secondItem="yiC-gr-iKo" secondAttribute="height" multiplier="1:1" id="KpF-OV-g24"/>
-                                </constraints>
-                            </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1" textAlignment="center" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="0Zf-hR-2WD">
-                                <rect key="frame" x="8" y="84" width="48" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="w22-vK-Ciu">
-                                <rect key="frame" x="64" y="84" width="94" height="29"/>
-                            </stepper>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ysY-Dy-wWd">
-                                <rect key="frame" x="64" y="121" width="94" height="29"/>
-                            </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Worth" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZr-lV-QUy">
-                                <rect key="frame" x="166" y="88" width="428" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Symbol" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NL4-rJ-F8D">
-                                <rect key="frame" x="166" y="125" width="428" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coin_16.png" translatesAutoresizingMaskIntoConstraints="NO" id="29Z-bb-v47">
-                                <rect key="frame" x="24" y="128" width="16" height="16"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="New Task" id="kko-lL-lTB">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="xKI-Ub-B97"/>
-                    </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8RO-iw-PCH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1073" y="1546"/>
         </scene>
         <!--Gifts-->
         <scene sceneID="YN0-2c-gwN">
@@ -292,6 +222,86 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xpN-ey-VCq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1781" y="841"/>
+        </scene>
+        <!--Task-->
+        <scene sceneID="NNo-he-auh">
+            <objects>
+                <tableViewController title="Task" id="MAQ-dl-gzS" customClass="TaskEditingViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="123" sectionHeaderHeight="22" sectionFooterHeight="22" id="8LT-6K-H0k">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EditingCell" rowHeight="122" id="H41-jQ-YvI">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H41-jQ-YvI" id="5bL-Nb-OVs">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="liB-6c-AsZ">
+                                            <rect key="frame" x="8" y="9" width="48" height="48"/>
+                                            <color key="backgroundColor" red="0.6549019814" green="0.88235300780000003" blue="0.99215692280000001" alpha="1" colorSpace="deviceRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="48" id="JMg-q5-1fh"/>
+                                                <constraint firstAttribute="width" constant="48" id="yob-YI-abZ"/>
+                                            </constraints>
+                                        </imageView>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Subtitle" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z2Q-1x-Txv">
+                                            <rect key="frame" x="64" y="47" width="528" height="30"/>
+                                            <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="19" translatesAutoresizingMaskIntoConstraints="NO" id="yAH-SX-pbI">
+                                            <rect key="frame" x="64" y="9" width="528" height="30"/>
+                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1" textAlignment="center" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="ASd-0d-hA5">
+                                            <rect key="frame" x="64" y="85" width="48" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="48" id="oaT-GO-Mte"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coin_16.png" translatesAutoresizingMaskIntoConstraints="NO" id="Dba-fc-Ig7">
+                                            <rect key="frame" x="8" y="76" width="48" height="48"/>
+                                        </imageView>
+                                        <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="TyR-ol-ogz">
+                                            <rect key="frame" x="120" y="85" width="94" height="29"/>
+                                        </stepper>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="yAH-SX-pbI" firstAttribute="trailing" secondItem="5bL-Nb-OVs" secondAttribute="trailingMargin" id="0tY-H7-Ugd"/>
+                                        <constraint firstItem="yAH-SX-pbI" firstAttribute="leading" secondItem="liB-6c-AsZ" secondAttribute="trailing" constant="8" id="Ccc-pW-RhU"/>
+                                        <constraint firstItem="liB-6c-AsZ" firstAttribute="centerX" secondItem="Dba-fc-Ig7" secondAttribute="centerX" id="ErA-mj-CRJ"/>
+                                        <constraint firstItem="liB-6c-AsZ" firstAttribute="width" secondItem="Dba-fc-Ig7" secondAttribute="width" id="KoD-QY-12a"/>
+                                        <constraint firstItem="ASd-0d-hA5" firstAttribute="centerY" secondItem="Dba-fc-Ig7" secondAttribute="centerY" id="T08-5E-DrD"/>
+                                        <constraint firstItem="ASd-0d-hA5" firstAttribute="centerY" secondItem="TyR-ol-ogz" secondAttribute="centerY" constant="0.5" id="Xm9-VY-RPG"/>
+                                        <constraint firstItem="ASd-0d-hA5" firstAttribute="leading" secondItem="z2Q-1x-Txv" secondAttribute="leading" id="Xzw-ok-6B3"/>
+                                        <constraint firstItem="liB-6c-AsZ" firstAttribute="leading" secondItem="5bL-Nb-OVs" secondAttribute="leadingMargin" id="Zg9-xD-WKQ"/>
+                                        <constraint firstItem="liB-6c-AsZ" firstAttribute="top" secondItem="5bL-Nb-OVs" secondAttribute="topMargin" id="aJ6-J0-xSM"/>
+                                        <constraint firstItem="ASd-0d-hA5" firstAttribute="top" secondItem="z2Q-1x-Txv" secondAttribute="bottom" constant="8" id="eSy-lu-eQY"/>
+                                        <constraint firstItem="liB-6c-AsZ" firstAttribute="height" secondItem="Dba-fc-Ig7" secondAttribute="height" id="h50-6Y-9yZ"/>
+                                        <constraint firstItem="z2Q-1x-Txv" firstAttribute="trailing" secondItem="yAH-SX-pbI" secondAttribute="trailing" id="n7b-bn-q6l"/>
+                                        <constraint firstItem="z2Q-1x-Txv" firstAttribute="top" secondItem="yAH-SX-pbI" secondAttribute="bottom" constant="8" id="odf-Fx-BfL"/>
+                                        <constraint firstItem="z2Q-1x-Txv" firstAttribute="leading" secondItem="yAH-SX-pbI" secondAttribute="leading" id="poi-2x-maz"/>
+                                        <constraint firstItem="yAH-SX-pbI" firstAttribute="top" secondItem="5bL-Nb-OVs" secondAttribute="topMargin" constant="1" id="tAP-24-5C9"/>
+                                        <constraint firstItem="TyR-ol-ogz" firstAttribute="leading" secondItem="ASd-0d-hA5" secondAttribute="trailing" constant="8" id="wBX-r9-FEh"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="MAQ-dl-gzS" id="LIy-MF-1Xi"/>
+                            <outlet property="delegate" destination="MAQ-dl-gzS" id="0xN-NK-aSe"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Task" id="WIX-6A-0Dc"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S06-Kt-rD1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1073" y="1565"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fOb-jP-1UR">
